--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -17,12 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "names=['Olivia Wang','Kelsey Luo']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,10 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "absent=list()\n",
+    "absent=['Olivia Wang','Kelsey Luo']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Olivia Wang', 'Kelsey Luo', 'Olivia Wang', 'Kelsey Luo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_names=names+absent\n",
+    "print(all_names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,10 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Olivia Wang', 'Kelsey Luo', [['Jenny Li', 'Olivia Wang']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "absent=list()\n",
+    "absent.append([['Jenny Li','Olivia Wang']])\n",
+    "all_names=names+absent\n",
+    "print(all_names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,12 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Yufei Li', 'Olivia Wang', 'Kelsey Luo', [['Jenny Li', 'Olivia Wang']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_names.insert(0,'Yufei Li')\n",
+    "print(all_names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,10 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[41, 92, 76, 15, 73, 24, 88, 61, 85, 57, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "range(10,100)\n",
+    "numbers=random.sample(range(10,100),11)\n",
+    "print(numbers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "634\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(numbers))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 16, 24, 41, 57, 61, 73, 76, 85, 88, 92]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers=sorted(numbers)\n",
+    "numbers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,10 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers[len(numbers)-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 16, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_three=numbers[:3]\n",
+    "print(first_three)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +272,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30, 32, 48, 41, 57, 61, 73, 76, 85, 88, 92]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers\n",
+    "for i in range(3):\n",
+    "    numbers[i]=numbers[i]*2\n",
+    "numbers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,10 +302,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[57, 61, 73]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "middle_three=numbers[int((len(numbers)+1)/2)-2:int((len(numbers)+1)/2)+1]\n",
+    "middle_three"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   },
   "toc": {
    "colors": {
