--- a/exercise-2/exercise.ipynb
+++ b/exercise-2/exercise.ipynb
@@ -18,10 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_evens(integers):\n",
+    "    number_evens=0\n",
+    "    for element in integers:\n",
+    "        if(element%2!=1):\n",
+    "            number_evens+=1\n",
+    "    return number_evens\n",
+    "count_evens([1,2,3,4,5])\n",
+    "#with open('a_list.txt') as my_file:\n",
+    "#    count_evens(my_file)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,10 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_even_indices(integers):\n",
+    "    l=list()\n",
+    "    for i in range(len(integers)):\n",
+    "        if (i%2==0):\n",
+    "            l.append(integers[i])\n",
+    "    return l\n",
+    "get_even_indices([1,2,3,4,5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +92,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 1]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rotate_left(integers):\n",
+    "    initial=integers[0]\n",
+    "    print(integers[0])\n",
+    "#    print(inital)\n",
+    "    for i in range(1,len(integers)):\n",
+    "        integers[i-1]=integers[i]\n",
+    "    integers[len(integers)-1]=initial\n",
+    "    return integers\n",
+    "rotate_left([1,2,3,4])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   },
   "toc": {
    "colors": {
